[package]
name = "oxide_broker"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "High-throughput, in-memory pub/sub message engine built on a lock-free MPMC ring buffer."
repository = "https://github.com/czhao-dev/lock-free-queue"

[lib]
name = "oxide_broker"
path = "src/lib.rs"

[[example]]
name = "throughput_bench"
path = "benchmarks/throughput_bench.rs"

[[example]]
name = "padding_bench"
path = "benchmarks/padding_bench.rs"

[[example]]
name = "latency_bench"
path = "benchmarks/latency_bench.rs"

[profile.release]
opt-level = 3
codegen-units = 1
